--- a/app/src/main/res/layout/activity_signup_activity.xml
+++ b/app/src/main/res/layout/activity_signup_activity.xml
@@ -24,6 +24,7 @@
             android:hint="Mobile Number"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/white"
+            android:textSize="20dp"
             android:textColorHint="@android:color/white"
             android:textColorHighlight="@android:color/white"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
@@ -42,6 +43,7 @@
             android:inputType="textPassword"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
+            android:textSize="20dp"
             android:textColorHighlight="@android:color/white"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
@@ -58,7 +60,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            android:textSize="15dp"/>
+            android:textSize="16dp"/>
 
 
         <!-- Link to Login Screen -->
@@ -72,6 +74,7 @@
             android:text="@string/btn_forgot_password"
             android:onClick="launchResetPasswordActivity"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="17dp"
             android:textAllCaps="false"
             android:textColor="@color/login" />
 
@@ -87,7 +90,7 @@
             android:onClick="gotoRegister"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="15dp" />
+            android:textSize="16dp" />
 
     </RelativeLayout>
     <ProgressBar
