--- a/app/src/main/res/layout/activity_shop_details.xml
+++ b/app/src/main/res/layout/activity_shop_details.xml
@@ -59,29 +59,19 @@
         android:hint="Shop Closing Time"
         android:textSize="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-    <TextView
-        android:id="@+id/location"
-        android:layout_below="@id/closingtime"
-        android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape"
-        android:padding="10dp"
-        android:hint="Location"
-        android:textSize="20dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+
     <Button
         android:id="@+id/Register"
-        android:layout_below="@id/location"
+        android:layout_below="@id/closingtime"
         android:layout_width="match_parent"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:layout_marginHorizontal="15dp"
         android:layout_height="wrap_content"
         android:text="Register"
         android:textSize="17dp"
         android:textAlignment="center"
         android:padding="5dp"
+        android:onClick="homepage"
         android:layout_centerHorizontal="true"
         android:background="@drawable/button"/>
     <View
@@ -89,13 +79,13 @@
         android:layout_below="@id/Register"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="115dp"
         android:background="#fc917e"/>
 
     <TextView
         android:id="@+id/bottom"
         android:layout_below="@id/line"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
