--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp"
-    android:layout_margin="10dp"
     android:background="@drawable/relativelayoutshape">
 
     <LinearLayout
@@ -19,10 +18,11 @@
             android:background="@drawable/b" />
         <TextView
             android:id="@+id/saloonname"
-            android:layout_width="250dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="17dp"
-            android:textSize="20dp"
+            android:textSize="18dp"
+            android:textColor="#000000"
             android:text="Special Saloon"
             android:textStyle="bold"
             android:layout_marginLeft="5dp"
@@ -32,7 +32,7 @@
         android:id="@+id/line"
         android:layout_below="@id/list_top"
         android:layout_width="match_parent"
-        android:layout_height="0.7dp"
+        android:layout_height="0.6dp"
         android:layout_marginHorizontal="8dp"
         android:background="#c2c0c0"/>
     <TextView
@@ -49,9 +49,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/booking"
         android:text="5 SEP 2019 at 7.30 PM"
-        android:textSize="16dp"
-        android:layout_marginLeft="10dp"
-        android:textStyle="bold"/>
+        android:textSize="15dp"
+        android:textColor="#000000"
+        android:layout_marginLeft="10dp" />
     <TextView
         android:id="@+id/scheduling"
         android:layout_width="match_parent"
@@ -68,13 +68,13 @@
         android:layout_below="@id/scheduling"
         android:layout_marginLeft="10dp"
         android:text="5 SEP 2019 at 7.30 PM"
-        android:textSize="16dp"
-        android:textStyle="bold"/>
+        android:textSize="15dp"
+        android:textColor="#000000" />
     <View
         android:id="@+id/belowline"
         android:layout_below="@id/scheduledisplay"
         android:layout_width="match_parent"
-        android:layout_height="0.7dp"
+        android:layout_height="0.6dp"
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="7dp"
         android:background="#c2c0c0"/>
@@ -83,7 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="WANT TO BOOK AGAIN?"
-        android:textSize="16dp"
+        android:textSize="14dp"
         android:layout_below="@id/belowline"
         android:drawableLeft="@drawable/ic_replay_grey_24dp"
         android:layout_marginTop="5dp"
