--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -20,6 +20,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginHorizontal="10dp"
+        android:scrollbars="none"
         android:divider="@null"
         android:dividerHeight="10dp"
         tools:layout_editor_absoluteX="8dp"
