--- a/app/src/main/res/layout/fragment_ownerappointment.xml
+++ b/app/src/main/res/layout/fragment_ownerappointment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,13 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="  Your Appointments"
+        android:textColor="#000000"
         android:textStyle="bold"
-        android:textSize="20dp"/>
+        android:textSize="18dp"/>
     <ListView
-        android:id="@+id/Ownermylist"
+        android:id="@+id/CustomerlistOwner"
+        android:layout_below="@id/textappointment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="10dp"
+        android:scrollbars="none"
+        android:divider="@null"
+        android:dividerHeight="10dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp"/>
-</FrameLayout>
+</RelativeLayout>
