--- a/app/src/main/res/layout/fragment_ratechart.xml
+++ b/app/src/main/res/layout/fragment_ratechart.xml
@@ -1,17 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <RelativeLayout
+        android:id="@+id/RateLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:textStyle="bold"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginHorizontal="15dp"
         android:textSize="20dp"
-        android:text="Rate Chart Fragment" />
-</RelativeLayout>
+        android:textColor="#ed541c"
+        android:text="SERVICE OFFERED" />
+    <TextView
+        android:id="@+id/haircutHeading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView1"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="10dp"
+        android:text="Hair Cut"
+        android:textSize="18dp"
+        android:textColor="#ed541c"/>
+    <TableLayout
+        android:id="@+id/HairCutRate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:orientation="horizontal"
+        android:stretchColumns="*"
+        android:layout_below="@id/haircutHeading">
+        <TableRow android:layout_height="0.8px" android:background="#000000">
+            <TextView android:layout_span="2" android:layout_height="1px"
+                android:layout_width="fill_parent" android:text="">
+            </TextView>
+        </TableRow>
+        <TableRow
+            android:id="@+id/generalHairCut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/GHHeading"
+                android:text="General"/>
+        </TableRow>
+    </TableLayout>
+    </RelativeLayout>
+</ScrollView>
