--- a/app/src/main/res/layout/fragment_ratechart.xml
+++ b/app/src/main/res/layout/fragment_ratechart.xml
@@ -25,31 +25,405 @@
         android:layout_below="@id/textView1"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         android:text="Hair Cut"
         android:textSize="18dp"
         android:textColor="#ed541c"/>
-    <TableLayout
-        android:id="@+id/HairCutRate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:orientation="horizontal"
-        android:stretchColumns="*"
-        android:layout_below="@id/haircutHeading">
-        <TableRow android:layout_height="0.8px" android:background="#000000">
-            <TextView android:layout_span="2" android:layout_height="1px"
-                android:layout_width="fill_parent" android:text="">
-            </TextView>
-        </TableRow>
-        <TableRow
-            android:id="@+id/generalHairCut"
+     <LinearLayout
+         android:id="@+id/cut_general"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@id/haircutHeading"
+         android:layout_marginHorizontal="15dp"
+         android:layout_marginTop="4dp"
+         android:padding="7dp"
+         android:background="@drawable/edit_text">
+         <TextView
+             android:layout_width="100dp"
+             android:layout_height="wrap_content"
+             android:hint="General"
+             android:textAllCaps="false"
+             android:textColor="#000000"
+             android:textSize="14dp"/>
+         <EditText
+             android:layout_width="70dp"
+             android:layout_height="wrap_content"
+             android:textColor="#000000"
+             android:textSize="15dp"
+             android:layout_marginLeft="150dp"
+             android:background="@drawable/edit_text"
+             android:padding="2dp"
+             android:textAlignment="center"/>
+     </LinearLayout>
+        <LinearLayout
+            android:id="@+id/cut_Buzz"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:layout_below="@id/cut_general"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
             <TextView
-                android:id="@+id/GHHeading"
-                android:text="General"/>
-        </TableRow>
-    </TableLayout>
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="Buzz cut"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="150dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/combover"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cut_Buzz"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="Comb Over"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="150dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/low_fade"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/combover"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="Low Fade"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="150dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/shavingHeading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/low_fade"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:text="Shaving"
+            android:textSize="18dp"
+            android:textColor="#ed541c"/>
+        <LinearLayout
+            android:id="@+id/shaving_trim"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/shavingHeading"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="4dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="Trimming"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="150dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/clean_shave"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/shaving_trim"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="Clean Shave"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="150dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/Massage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/clean_shave"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:text="Massage"
+            android:textSize="18dp"
+            android:textColor="#ed541c"/>
+        <LinearLayout
+            android:id="@+id/face_massage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Massage"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="4dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="Face massage"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="150dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/classic_massage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/face_massage"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="Classic massage"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="110dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/Therapeutic_massage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/classic_massage"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="Therapeutic massage"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="110dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/others"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Therapeutic_massage"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:text="Others"
+            android:textSize="18dp"
+            android:textColor="#ed541c"/>
+        <LinearLayout
+            android:id="@+id/hair_straightining"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/others"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="4dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="Hair straightening"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="110dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/facial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/hair_straightining"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="Facial"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="110dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/manicure"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/facial"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="Manicure"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="110dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/padicure"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/manicure"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="Pedicure"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="110dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/spa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/padicure"
+            android:layout_marginHorizontal="15dp"
+            android:padding="7dp"
+            android:background="@drawable/edit_text"
+            android:layout_marginBottom="10dp">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="Hair spa"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="14dp"/>
+            <EditText
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:layout_marginLeft="110dp"
+                android:background="@drawable/edit_text"
+                android:padding="2dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spa"
+            android:layout_marginHorizontal="15dp"
+            android:textSize="11dp"
+            android:textColor="#000000"
+            android:hint="*If you don't offer any service, put 0 as it's price."/>
     </RelativeLayout>
 </ScrollView>
