--- a/app/src/main/res/layout/activity_customer_signup.xml
+++ b/app/src/main/res/layout/activity_customer_signup.xml
@@ -32,13 +32,17 @@
         android:orientation="horizontal"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="50dp">
-        <EditText android:layout_width="fill_parent"
+        <EditText
+            android:id="@+id/Fname"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/shape"
             android:hint="First name"
             android:padding="10dp"/>
-        <EditText android:layout_width="fill_parent"
+        <EditText
+            android:id="@+id/Lname"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Last name"
@@ -47,7 +51,7 @@
             android:layout_marginLeft="5dp"/>
     </LinearLayout>
     <EditText
-        android:id="@+id/address"
+        android:id="@+id/number"
         android:layout_below="@id/name"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
@@ -58,7 +62,7 @@
         android:hint="Mobile number"/>
     <EditText
         android:id="@+id/email"
-        android:layout_below="@id/address"
+        android:layout_below="@id/number"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
@@ -74,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape"
+        android:inputType="textPassword"
         android:padding="10dp"
         android:hint="Password"/>
     <EditText
@@ -110,4 +115,12 @@
         android:padding="5dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/button"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/Register"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone" />
 </RelativeLayout>
