--- a/app/src/main/res/layout/activity_signup_activity.xml
+++ b/app/src/main/res/layout/activity_signup_activity.xml
@@ -19,9 +19,9 @@
             android:layout_margin="15dp"
             android:padding="15dp"
             android:background="@drawable/shapeemail"
-            android:drawableLeft="@drawable/ic_person_black_24dp"
+            android:drawableLeft="@drawable/ic_email_grey_24dp"
             android:drawablePadding="10dp"
-            android:hint="Mobile Number"
+            android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/white"
             android:textSize="20dp"
